[package]
name = "rust-udps"
version = "0.4.0-alpha"
authors = ["Daniel Wanner <daniel.wanner@tubber.xyz>"]
edition = "2018"
publish = false

[lib]
name = "udps"
path = "src/lib.rs"
crate-type = ["dylib"]

[[example]]
name = "server"
crate-type = ["bin"]

[dependencies]
rand = "0.6.3"
libc = "*"
serde = "*"
serde_derive = "*"
rmp-serde = "*"