[package]
name = "udps"
version = "0.4.1-alpha"
authors = ["Daniel Wanner <daniel.wanner@tubber.xyz>"]
edition = "2018"
publish = false

[lib]
name = "udps"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]

[[example]]
name = "server"
path = "examples/server.rs"
crate-type = ["bin"]

[[example]]
name = "client"
path = "examples/client.rs"
crate-type = ["bin"]

[dependencies]
rand = "0.6.3"
libc = "*"
serde = "*"
serde_derive = "*"
rmp-serde = "*"